<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="com.amsspecialist.fragments.Notifications_Fragment"
    android:id="@+id/notifications_fragment">

   <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/imageUser"
                android:src="@drawable/ic_launcher"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="Large Text"
                android:id="@+id/textUsername"
                android:layout_below="@+id/icondrawner"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_in"
                android:id="@+id/buttonLogin"
                android:layout_alignTop="@+id/textView2"
                android:layout_alignLeft="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:visibility="visible"
                style="@style/Button" />

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/card_new_post"
                card_view:cardElevation="2dp"
                card_view:cardCornerRadius="5dp"
                android:stateListAnimator="@drawable/translation_selector"
                android:clickable="true"
                android:background="@drawable/selector_item"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_item">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/news"
                            android:id="@+id/texttitle_newpost"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/news_post_comment"
                            android:id="@+id/textComment_newpost"
                            android:textStyle="italic" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="0"
                        android:textColor="@android:color/white"
                        android:id="@+id/textBadge_newpost"
                        android:layout_gravity="center_vertical"
                        android:padding="10dp"
                        android:background="@drawable/badge"
                        android:layout_marginRight="10dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_new_mps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                card_view:cardElevation="2dp"
                card_view:cardCornerRadius="5dp"
                android:stateListAnimator="@drawable/translation_selector"
                android:clickable="true"
                android:background="@drawable/selector_item"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@drawable/selector_item">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:layout_weight="1">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:text="@string/news_mps"
                            android:id="@+id/texttitle_newmps"
                            android:textStyle="bold|italic" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="@string/news_mps_comment"
                            android:id="@+id/textComment_newmps"
                            android:textStyle="italic" />


                    </LinearLayout>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="0"
                        android:textColor="@android:color/white"
                        android:id="@+id/textBadge_newmps"
                        android:layout_gravity="center_vertical"
                        android:padding="10dp"
                        android:background="@drawable/badge"
                        android:layout_marginRight="10dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>


        </LinearLayout>
    </ScrollView>

</FrameLayout>
